# mcp-query

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/mcp_query/: __main__.py  audit.py  config.py  db.py  server.py  ui.py
